# enterprise/api/v1/server/restapi/daemon/get_config.go
@@ -1,0 +1,66 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+// Copyright (C) Isovalent, Inc. - All Rights Reserved.
+//
+// NOTICE: All information contained herein is, and remains the property of
+// Isovalent Inc and its suppliers, if any. The intellectual and technical
+// concepts contained herein are proprietary to Isovalent Inc and its suppliers
+// and may be covered by U.S. and Foreign Patents, patents in process, and are
+// protected by trade secret or copyright law.  Dissemination of this information
+// or reproduction of this material is strictly forbidden unless prior written
+// permission is obtained from Isovalent Inc.
+
+package daemon
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// GetConfigHandlerFunc turns a function with the right signature into a get config handler
+type GetConfigHandlerFunc func(GetConfigParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn GetConfigHandlerFunc) Handle(params GetConfigParams) middleware.Responder {
+	return fn(params)
+}
+
+// GetConfigHandler interface for that can handle valid get config params
+type GetConfigHandler interface {
+	Handle(GetConfigParams) middleware.Responder
+}
+
+// NewGetConfig creates a new http.Handler for the get config operation
+func NewGetConfig(ctx *middleware.Context, handler GetConfigHandler) *GetConfig {
+	return &GetConfig{Context: ctx, Handler: handler}
+}
+
+/*
+	GetConfig swagger:route GET /config daemon getConfig
+
+Get configuration of enterprise-only features of Cilium daemon
+*/
+type GetConfig struct {
+	Context *middleware.Context
+	Handler GetConfigHandler
+}
+
+func (o *GetConfig) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		*r = *rCtx
+	}
+	var Params = NewGetConfigParams()
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
