# enterprise/api/v1/server/restapi/daemon/get_config_responses.go
@@ -1,0 +1,69 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+// Copyright (C) Isovalent, Inc. - All Rights Reserved.
+//
+// NOTICE: All information contained herein is, and remains the property of
+// Isovalent Inc and its suppliers, if any. The intellectual and technical
+// concepts contained herein are proprietary to Isovalent Inc and its suppliers
+// and may be covered by U.S. and Foreign Patents, patents in process, and are
+// protected by trade secret or copyright law.  Dissemination of this information
+// or reproduction of this material is strictly forbidden unless prior written
+// permission is obtained from Isovalent Inc.
+
+package daemon
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/cilium/cilium/enterprise/api/v1/models"
+)
+
+// GetConfigOKCode is the HTTP code returned for type GetConfigOK
+const GetConfigOKCode int = 200
+
+/*
+GetConfigOK Success
+
+swagger:response getConfigOK
+*/
+type GetConfigOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.EnterpriseDaemonConfiguration `json:"body,omitempty"`
+}
+
+// NewGetConfigOK creates GetConfigOK with default headers values
+func NewGetConfigOK() *GetConfigOK {
+
+	return &GetConfigOK{}
+}
+
+// WithPayload adds the payload to the get config o k response
+func (o *GetConfigOK) WithPayload(payload *models.EnterpriseDaemonConfiguration) *GetConfigOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get config o k response
+func (o *GetConfigOK) SetPayload(payload *models.EnterpriseDaemonConfiguration) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetConfigOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
